Get all own message and decrypt message
