# app/Http/Controllers/PrivateChatController.php
@@ -4,8 +4,10 @@ namespace App\Http\Controllers;
 
 use App\Constants\AppConstants;
 use App\Http\Requests\PrivateMessageRequest;
+use App\Http\Resources\MessageResource;
 use App\Http\Responses\Response;
 use App\Repositories\MessageRepositoryEloquent;
+use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Redis;
 use Symfony\Component\HttpFoundation\Response as StatusCode;
@@ -52,6 +54,7 @@ class PrivateChatController extends Controller
             'message' => $encryptedMessage,
             'receiver_id' => $receiverId,
             'sender_id' => Auth::user()->id,
+            'iv' => $iv,
         ];
         $this->messageRepository->create($data);
         // Using Redis
@@ -62,6 +65,53 @@ class PrivateChatController extends Controller
             ->setMessage(__(AppConstants::RESPONSE_CODES_MESSAGES[AppConstants::APP_1011]))
             ->setStatusCode(StatusCode::HTTP_OK)
             ->setResponseCode(AppConstants::APP_1011)
+            ->success();
+    }
+
+        /**
+     * @OA\Get(
+     *     path="/api/v1/receiver-messages",
+     *     summary="Get all own messages",
+     *     tags={"Chat"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Parameter(
+     *         name="limit",
+     *         in="query",
+     *         description="Limit the number of results",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *    @OA\Parameter(
+     *          name="page",
+     *          description="page",
+     *          required=false,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="integer"
+     *          )
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation"
+     *     ),
+     * )
+     */
+    public function receiveMessage(Request $request)
+    {
+        $limit = $request->query('limit', null);
+        $query = $this->messageRepository->searchByUser(Auth::user()->id);
+ 
+        // Paginate the results
+        $result = $query->orderBy('created_at', 'asc')->paginate($limit);
+
+        $result = new MessageResource($result);
+        $result = $result->response()->getData(true);
+
+        return Response::create()
+            ->setData($result)
+            ->setStatusCode(StatusCode::HTTP_OK)
+            ->setMessage(__(AppConstants::RESPONSE_CODES_MESSAGES[AppConstants::APP_1012]))
+            ->setResponseCode(AppConstants::APP_1012)
             ->success();
     }
 }
