# storage/api-docs/api-docs.json
@@ -139,6 +139,45 @@
                     }
                 ]
             }
+        },
+        "/api/v1/receiver-messages": {
+            "get": {
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "Get all own messages",
+                "operationId": "c0b5d4432a9f6ac75e8ffa2d8b074c51",
+                "parameters": [
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Limit the number of results",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "page",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
         }
     },
     "tags": [
